# rust-scripting

./: .luarc.json  Cargo.toml  README.md  build.rs  test.txt
crates/js/: README.md
crates/lua/: Cargo.toml  README.md  build.rs
crates/lua/examples/: async_http_client.rs  async_http_server.rs  async_reqwest.rs  guided_tour.rs  repl.rs  serialize.rs  userdata.rs
crates/lua/examples/lua/: user_lib.lua
crates/lua/lua/: main.lua  sample.json
crates/lua/src/: lib.rs  main.rs  modules.rs
crates/lua/src/http/: client.rs  mod.rs  server.rs
examples/: async_http_client.rs  importing.rs
lua/: init.lua  plugins.lua  utils.lua
lua/nested/: file_io.lua  init.lua
lua/types/: plugins.lua  pprinting.lua  provided.lua  root.lua
src/: lib.rs  lua.rs  main.rs  plugin.rs  prelude.rs
src/modules/: config.rs  mod.rs  plugin.rs  prettify.rs
