[package]
name = "scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.2.0", features = ["full"] }
mlua = { version = "0.9.6", features = ["serde", "serialize", "macros", "async", "lua54", "vendored"] }
reqwest = { version = "0.11.26", features = ["json"] }
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
